--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "dotenv": "^16.3.1",
     "node-fetch": "^2.6.12",
     "pino": "^8.12.0",
-    "qrcode-terminal": "^0.12.1",
+    "qrcode-terminal": "^0.12.0",
     "axios": "^1.6.6",
     "image-data-uri": "^2.0.1",
     "form-data": "^3.0.0"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "engines": {
+    "node": "18.x"
+  }
 }
