--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
   "name": "ib-hex-md",
   "version": "2.0.0",
-  "description": "IB-HEX-MD WhatsApp Bot - Multi-device avec Baileys",
+  "description": "IB-HEX-MD WhatsApp Bot multi-device avec commandes AI, fun, search et convert",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^7.13.3",
+    "axios": "^1.6.0",
+    "qrcode-terminal": "^0.12.0",
+    "node-fetch": "^2.6.9",
+    "image-data-uri": "^2.0.0",
+    "puppeteer": "^21.3.0",
+    "pino": "^8.16.2",
+    "dotenv": "^16.3.1",
+    "form-data": "^4.0.0",
+    "readline": "^1.3.0"
   },
   "keywords": [
     "whatsapp",
     "baileys",
     "bot",
+    "ai",
     "ib-hex-md"
   ],
   "author": "Ib Sacko",
-  "license": "MIT",
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.18",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^2.6.12",
-    "pino": "^8.12.0",
-    "qrcode-terminal": "^0.12.0",
-    "axios": "^1.6.6",
-    "image-data-uri": "^2.0.1",
-    "form-data": "^3.0.0"
-  },
-  "type": "commonjs",
-  "engines": {
-    "node": "18.x"
-  }
+  "license": "MIT"
 }
