--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
     "node": "18.x"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.13.3",
-    "axios": "^1.6.0",
-    "qrcode-terminal": "^0.12.0",
-    "node-fetch": "^2.6.9",
-    "image-data-uri": "^2.0.0",
-    "puppeteer": "^21.3.0",
-    "pino": "^8.16.2",
+    "@whiskeysockets/baileys": "6.7.18",
+    "axios": "^1.6.6",
     "dotenv": "^16.3.1",
-    "form-data": "^4.0.0",
-    "readline": "^1.3.0"
+    "image-data-uri": "^2.0.1",
+    "node-fetch": "^2.6.12",
+    "pino": "^8.16.2",
+    "puppeteer": "^21.3.0",
+    "qrcode-terminal": "0.12.0",
+    "form-data": "^3.0.0"
   },
   "keywords": [
     "whatsapp",
     "baileys",
     "bot",
-    "ai",
     "ib-hex-md"
   ],
   "author": "Ib Sacko",
