--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "ib-hex-md",
   "version": "2.0.0",
-  "description": "IB-HEX-MD WhatsApp Bot multi-device avec commandes AI, fun, search et convert",
+  "description": "IB-HEX-MD WhatsApp Bot",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.7.18",
-    "axios": "^1.6.6",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.7",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.4.5",
+    "file-type": "^18.5.0",
+    "form-data": "^4.0.0",
     "image-data-uri": "^2.0.1",
-    "node-fetch": "^2.6.12",
-    "pino": "^8.16.2",
-    "puppeteer": "^21.3.0",
-    "qrcode-terminal": "0.12.0",
-    "form-data": "^3.0.0"
-  },
-  "keywords": [
-    "whatsapp",
-    "baileys",
-    "bot",
-    "ib-hex-md"
-  ],
-  "author": "Ib Sacko",
-  "license": "MIT"
+    "node-fetch": "^3.3.2",
+    "pino": "^8.21.0",
+    "qrcode-terminal": "^0.12.0"
+  }
 }
