--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "ib-hex-md",
   "version": "2.0.0",
-  "description": "IB-HEX-MD WhatsApp Bot",
+  "description": "IB-HEX-MD WhatsApp Bot (Baileys Multi-Device)",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=20.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.7.18",
-    "axios": "^1.6.7",
-    "chalk": "^4.1.2",
-    "dotenv": "^16.4.5",
-    "file-type": "^18.5.0",
-    "form-data": "^4.0.0",
-    "image-data-uri": "^2.0.1",
-    "node-fetch": "^3.3.2",
-    "pino": "^8.21.0",
-    "qrcode-terminal": "^0.12.0"
+    "@whiskeysockets/baileys": "latest",
+    "pino": "*",
+    "qrcode-terminal": "*",
+    "dotenv": "*",
+    "node-fetch": "2",
+    "image-data-uri": "*",
+    "ytdl-core": "*",
+    "puppeteer": "*"
   }
 }
