--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ib-hex-md",
   "version": "2.0.0",
-  "description": "IB-HEX-MD WhatsApp Bot (Baileys Multi-Device) avec QR Web",
+  "description": "IB-HEX-MD WhatsApp Bot (Baileys Multi-Device)",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
@@ -11,16 +11,17 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
-    "pino": "^8.12.0",
-    "qrcode-terminal": "^0.12.0",
-    "dotenv": "^17.2.3",
+    "@whiskeysockets/baileys": "7.13.0",
+    "pino": "*",
+    "qrcode-terminal": "*",
+    "dotenv": "*",
     "node-fetch": "2",
-    "image-data-uri": "^2.0.3",
-    "ytdl-core": "^4.11.0",
-    "puppeteer": "^21.3.1",
-    "axios": "^1.6.6",
-    "express": "^4.18.2",
-    "openai": "^4.22.1"
+    "image-data-uri": "1.0.3",
+    "ytdl-core": "*",
+    "puppeteer": "*",
+    "axios": "*",
+    "openai": "*",
+    "express": "*",
+    "socket.io": "*"
   }
 }
