--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@whiskeysockets/baileys": "latest",
     "pino": "^8.17.0",
-    "qrcode-terminal": "^0.12.0",
     "dotenv": "^16.4.5",
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
     "node-fetch": "2",
     "ytdl-core": "^4.11.5",
-    "axios": "^1.6.8",
-    "openai": "^4.24.1",
-    "express": "^4.19.2"
+    "openai": "^4.24.1"
   }
 }
